[package]
name = "basic_dungeon_crawler"
version = "0.1.0"
authors = ["KiwiCode-s <38774014+KiwiCode-s@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
legion = "= 0.3.1"
